                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 12-06-2005 added: readstring method to zip file class.
 - 12-06-2005 fixed: seeking after selecting time using seekbar was very slow
 - 12-06-2005 changed: HttpApi: re-enabled database lookup
 - 11-06-2005 updated: mplayer.dll - about 1 meg smaller than old (saves mem).
                       has been compiled with gcc.3.4.4 and has some unneeded filters removed
 - 11-06-2005 fixed: HttpApi internal logic bug
 - 10-06-2005 added: Master Code Control: XBMC Startup Lock! [GeminiServer]
		     XBMC Startup Lock will use the Master Lock Settings and if Startup Lock is enabled:
		     On XBMC Startup, the XBMC Startup Lock will ask you the predefined Master Code in 
		     addition with the Max Retry. If you enter the correct MasterCode, XBMC will start as used
		     But if you enter the Wrong Master Code in addition with the Max Retry:
		     Then XBMC switches off! if you restart XBMC it will ask the Master Code again!
 - 10-06-2005 added: Master Code control within the GUI! [GeminiServer]
		     This will  make it easy to set the Master Code handling, instead of XboxMediaCenter.xml 
		     editing to set the <masterlock> settings. It will set the Master Code, Retry, Enable Shutdown, 
		     Protect Shares, Master Mode, automatic, with MasterCode detection and also the conditions to use it!
		     Master Lock will use the Max Retry condition, to prevent the infinite tries on the Settings
		     Screen! It will ask you the Master code on: Entering a New Master Code, Disabling Master Mode
		     and also it will ask on hit Applying Changes! The Master Code Remember is not used here, to prevent not intended changes