@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 13-06-2005 fixed: the option to enable autosync in mplayer (smooth audio clock) wasn't taking affect
  - 12-06-2005 added: readstring method to zip file class.
  - 12-06-2005 fixed: seeking after selecting time using seekbar was very slow
  - 12-06-2005 changed: HttpApi: re-enabled database lookup
